frontend/src/styles/UserSignUp.css
img {
    width: 20px;
    height: 20px;
}

.page-content {
    min-height: 100vh;
    font-size: 16px;
    display: flex;
    flex-direction: column;
    width: auto;
    flex-grow: 1;
    height:100vh;
}

.navbar {
    background-color: rgb(2, 2, 2);
    color: white;
    border: solid white;
    min-height: 60px;
    z-index: 3;
}



  
.signup-window {
    color:#BBC7DD;
    display: flex;
    background: none;
    position: relative;

    flex-direction: column; 
    align-items: center; 
    justify-content: center;
    border: solid white;
    height:100%;
    width: auto;
    box-sizing: border-box;
}

@keyframes fadeSlideIn {
    0% { opacity: 0; top: 12px; }
    50% { opacity: 0.5; top: -5px; }
    100% { opacity: 1; top: 0px; }
}

.signup-window {
    animation: fadeSlideIn 0.5s;
}

.signup-window a {
    color: #008B8B;
    text-decoration: none;
    transition: all 0.1s ease-in-out;

}


.signup-window a:active {
    color: #0baca9;
    transition: all 0.05s ease-in-out;
}

.signup-form {
    background-color: #192233;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;

    height: auto;
    width: 50%;
    min-height: 300px;
    min-width: 400px;
    border-radius: 10px;

    box-sizing: border-box;
}


.signup-body {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    height: auto;
    width: 67%;
    gap: 20px;
}

.required-container {
    width: 100%;
    position: relative;
    margin: 20px 0 20px 0;
    gap: 5px;
}

#required-details {
    font-size: 0.6em;
    position: absolute;
    right: 0;
    display: flex;
    gap: 5px;
}

#signup-title {
    margin: 10px 0 0;
    font-size: 1.3rem;
    text-align: center;
}

.signup-body > .input-field {
    width: 100%; /* Ensure elements take full width */
    margin: 0;
}

.signup-body * {
    margin: 0;
}

.input-container {
    position: relative;
    flex-direction: column;
    display: flex;
    height: 100%;
    align-items: stretch;
    gap: 5px;
    margin: 0;
}

.signup-options-container {
    position: relative;
    display: flex;
    height: 50%;
    flex-direction: column;
    width: 100%;
}

.signup-options {
    display: flex;
    height: 50%;
    width: 100%;
    position: absolute;
    top: 2px;
}


.input-box {

    border-radius: 100px;

    height:30px;
    background-color: #2B3547;

    position: relative;
    box-sizing: border-box;
}

.input-field {
    transform:translateX(2%);
    border: 0;
    color: #BBC7DD;
    background: none;

    height: 100%;
    width: 85%;
}

.input-field:aut {
    background-color: black;
}

.pw-field-container {
    position: relative;
    width: inherit;
    height: 100%;
}

.field-title{
    position: relative;

    bottom:2px;
    font-size:70%;
    
}


.signup-extra {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    background-color: white;
    color: black;
    width: 50%;
    min-width: 400px;
    height: 5%;
    
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
}

.signup-container {
    position: relative;
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
    width: 67%;
}

#signup-link {
    padding-left: 5px;
}

.showhide-pw {
    display: flex;
    justify-content: center;
    align-items: center;
    position: absolute;
    right: 10px;
    top: 50%;
    transform: translateY(-50%);
    height: 300%;
    cursor: pointer;

}

#showhide-icon {
    height: 20%;
    
}


.signup-button-container {
    position: relative;
    display: flex;
    flex-direction: row-reverse;
    height: 50%;
    width: 100%;
    margin: 0 0 20px 0;
}

#signup-button {
    margin: 15px 0 10px 0;
    background-color:#008B8B;
    font: inherit;
    font-size: 100%;
    position: relative;
    border-radius: 10px;
    border: 0;
    top: 0;
    width: 25%;
    height: 35px;
    z-index: 1;
    transition: all 0.1s ease-in-out;
    cursor: pointer;
}

#signup-button:active {
    background-color:#0baca9;
    transition: all 0.05s ease-in-out;
}

#forgot-pw {
    position: absolute;
    right: 0;
}


#rmb-label{
    padding-left: 5px;
}

#rmb-checkbox {
    color: black;
}

#rmb-checkbox:checked {
    color: black;
}

#email-title {
    gap: 5px;
}

#consent-checkbox {
    height: auto;
}

#consent-label {
    font-weight: 100;
    letter-spacing: 0;
    margin: 5px;
    overflow: auto;
}

#to-login-button {
    position: absolute;
    left:0;
    top: 40%;
}

